feat: Removendo itens e fzendo alterações que cliente pediu

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="index.html" id="nav-home" class="active">Início</a>
                     <a href="./pages/sobre.html" id=nav-sobre>Sobre Nós</a>
                     <a href="./pages/servicos.html">Serviços</a></li>
-                    <a href="./pages/portifolio.html" id="nav-portifolio">Portifólio</a>
+                    <a href="./pages/portifolio.html" id="nav-portifolio">Portfólio</a>
                     <a href="./pages/contato.html" id="nav-contato">Contato</a>
                 </ul>
             </nav>
@@ -43,17 +43,13 @@
 
     <main>
         <section id="apresentacao">
-            <div class="apt-foto">
-                <img src="assets/imgs/banner-enej2.png" alt="foto da PCI">
-            </div>
-
             <div class="apt-infos">
                 <div class="apt-texto">
                     <p>
                         A Projetos Consultoria Integrada é a 
                         empresa júnior do CEUB que atua 
                         <strong>
-                            <label style="color: #c40001";> 
+                            <label style="color: #c40001;"> 
                             há 25 anos
                             </label>
                         </strong>
@@ -69,14 +65,14 @@
                                 Consultoria Empresarial e Organizacional
                             </p>
                         </li>
-                    
+
                         <li class="apt-sub-lista">
                             <img src="assets/icons/seta-vermelha-icon.png" alt="Seta vermelha">
                             <p>
                                 Serviços de Marketing e T.I
                             </p>
                         </li>    
-                    
+
                         <li class="apt-sub-lista">
                             <img src="assets/icons/seta-vermelha-icon.png" alt="Seta vermelha">
                             <p>
