--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -29,7 +29,7 @@
                         <a href="../index.html" id="nav-home" >Início</a>
                         <a href="../pages/sobre.html" id=nav-sobre class="active">Sobre Nós</a>
                         <a href="../pages/servicos.html">Serviços</a></li>
-                        <a href="../pages/portifolio.html" id="nav-portifolio">Portifólio</a>
+                        <a href="../pages/portifolio.html" id="nav-portifolio">Portfólio</a>
                         <a href="../pages/contato.html" id="nav-contato">Contato</a>
                     </ul>
                 </nav>
@@ -49,7 +49,7 @@
 
     <main>
         <section id=apresentacao>
-            <div class="apt-infos">
+            <div class="sobre-apt-infos">
                 <div class="apt-titulo">
                     <h1>QUEM SOMOS</h1>
                 </div>
@@ -64,10 +64,6 @@
                         spositivo para a comunidade acadêmica.
                     </p>
                 </div>
-            </div>
-
-            <div class="apt-foto">
-                <img src="../assets/imgs/sp.jpg" alt="foto da PCI">
             </div>
         </section>
 
@@ -95,20 +91,6 @@
                     </p>
                 </div>
 
-                <div class="mvd-slide" data-index="2">
-                    <div class="mvd-icon-titulo">
-                        <img src="../assets/icons/diversidade-icon.png" alt="ícone mão DIVERSIDADE">
-                        <h2>DIVERSIDADE</h2>
-                    </div>
-                    <p>
-                        "É buscar a somatória das diferenças para
-                        atuar de maneira integrada, promovendo
-                        acessibilidade, acolhimento e inclusão para
-                        viabilizar mudanças e ser referência de
-                        inspiração"
-                    </p>
-                </div>
-
                 <div class="mvd-seta" onclick="proximoSlide()">
                     <img src="../assets/icons/seta-branca-icon.png" alt="">
                 </div>
@@ -116,7 +98,6 @@
                 <div class="mvd-dots">
                     <span class="dot active" onclick="irParaSlide(0)"></span>
                     <span class="dot" onclick="irParaSlide(1)"></span>
-                    <span class="dot" onclick="irParaSlide(2)"></span>
                 </div>
             </div>        
         </section>
