--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -28,7 +28,7 @@
                     <a href="../index.html" id="nav-home" >Início</a>
                     <a href="../pages/sobre.html" id=nav-sobre >Sobre Nós</a>
                     <a href="../pages/servicos.html" class="active">Serviços</a></li>
-                    <a href="../pages/portifolio.html" id="nav-portifolio">Portifólio</a>
+                    <a href="../pages/portifolio.html" id="nav-portifolio">Portfólio</a>
                     <a href="../pages/contato.html" id="nav-contato">Contato</a>
                 </ul>
             </nav>
