feat: pop-up na logo do header

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -16,11 +16,15 @@
             </div>
 
             <div class="logo-PCI">
-                <img src="../assets/logos/PCI-logo-branca.png" alt="Logo PCI" height="80px">
+                <a href="../index.html">
+                    <img src="../assets/logos/PCI-logo-branca.png" alt="Logo PCI" height="80px">
+                </a>    
             </div>
 
             <div class="logo-PCI-escrita">
-                <img src="../assets/logos/PCI-logo-escrita-branca.png" alt="Logo PCI" height="80px">
+                <a href="../index.html">
+                    <img src="../assets/logos/PCI-logo-escrita-branca.png" alt="Logo PCI" height="80px">
+                </a>    
             </div>
 
             <div class="header-nav">
