feat: Botão para voltar ao topo da página

--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -45,6 +45,10 @@
         </div>
     </header>
 
+    <a href="#" class="scroll">
+        <span>&#8593;</span> 
+    </a>
+    
     <main>
         <section id="serv-titulo">
         
