--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -51,6 +51,10 @@
         </div>
     </div>    
 
+    <a href="#" class="scroll">
+        <span>&#8593;</span> 
+    </a>
+    
     <main>
         <section id=apresentacao>
             <div class="sobre-apt-infos">
