feat: Botão de whatsapp para marcar diagnóstico

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
         <span>&#8593;</span> 
     </a>
 
+    <div class="botao-wpp">
+        <a href="https://wa.me/5561998540330?text=Ol%C3%A1%21%20Quero%20marcar%20um%20diagn%C3%B3stico" target="_blank">
+            <img src="assets/logos/wpp-logo.png" alt="WhatsApp" width="65px" height="65px">
+        </a>
+    </div>
+
     <main>
         <section id="apresentacao">
             <div class="apt-infos">
