feat: Adição de páginas específicas para os serviços (soluções)

--- a/pages/arquitetura.html
+++ b/pages/arquitetura.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serviços - Projetos Consultoria Integrada</title>
+    <title>Contato - Projetos Consultoria Integrada</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../assets/logos/PCI-logo-vermelha.png" type="image/png">
 </head>
@@ -32,10 +32,10 @@
                     <a href="../index.html" id="nav-home" >Início</a>
                     <a href="../pages/sobre.html" id=nav-sobre >Sobre Nós</a>
                     <li class="solucoes">
-                        <a href="#" class="botao-solucoes">Soluções</a>
+                        <a href="#" id="botao-solucoes" class="active">Soluções</a>
                         <div class="solucoes-info">
                             <a href="../pages/consultorias.html">Consultorias</a>
-                            <a href="../pages/arquitetura.html">Arquitetura</a>
+                            <a href="../pages/arquitetura.html" class="active">Arquitetura</a>
                         </div>
                     </li>
                     <a href="../pages/portifolio.html" id="nav-portifolio">Portfólio</a>
@@ -64,7 +64,7 @@
     <main>
         <section id="serv-titulo">
         
-            <h1>NOSSOS SERVIÇOS</h1>
+            <h1>ARQUITETURA</h1>
 
             <div class="serv-titulo-frase">
                 <p>
@@ -101,54 +101,35 @@
 
         <section id=servicos>
             <div class="servico">
-                <img class="icone-fundo" src="../assets/icons/servicos/operacoes-icon.png" alt="Serviço Icon" width="40px" height="40px">
-                <h3>OPERAÇÕES</h3>
-                <p>Mensuração individual dos membros para melhorar impacto e produtividade; análise de fluxos para otimizar processos, reduzir custos e aumentar a eficiência.</p>
+                <img class="icone-fundo" src="../assets/icons/servicos/arquitetonico-icon.png" alt="Serviço Icon" width="40px" height="40px">
+                <h3>ARQUITETÔNICO</h3>
+                <p>Criação e desenvolvimento de projetos desde o zero, contemplando todas as etapas do processo construtivo, da concepção inicial ao detalhamento técnico.</p>
             </div>
 
             <div class="servico">
-                <img class="icone-fundo" src="../assets/icons/servicos/estrategia-icon.png" alt="Serviço Icon" width="40px" height="40px">
-                <h3>ESTRATÉGIA E EXPANSÃO</h3>
-                <p>À partir de uma análise completa do negócio e do mercado, identificam-se oportunidades e direcionam-se ações para a obtenção de melhores resultados.</p>
+                <img class="icone-fundo" src="../assets/icons/servicos/consultoriadeinteriores-icon.png" alt="Serviço Icon" width="40px" height="40px">
+                <h3>CONSULTORIA DE INTERIORES</h3>
+                <p>Análise e orientação para a reorganização ou renovação de ambientes, buscando melhorias estéticas e funcionais por meio de pequenas intervenções e mudanças de layout.</p>
             </div>
 
             <div class="servico">
-                <img class="icone-fundo" src="../assets/icons/servicos/marketing-icon.png" alt="Serviço Icon" width="40px" height="40px">
-                <h3>MARKETING E VENDAS</h3>
-                <p>Posicionamento definido por produto, preço, praça e promoção, além do mapeamento dos processos comerciais para a identificação de gargalos.</p>
+                <img class="icone-fundo" src="../assets/icons/servicos/designdeinteriores-icon.png" alt="Serviço Icon" width="40px" height="40px">
+                <h3>DESIGN DE INTERIORES</h3>
+                <p>Desenvolvimento de soluções detalhadas de mobiliário e acabamentos, com foco na ergonomia, estética e identidade do espaço, garantindo funcionalidade e conforto aos usuários.</p>
             </div>
 
             <div class="servico">
-                <img class="icone-fundo" src="../assets/icons/servicos/negocios-icon.png" alt="Serviço Icon" width="40px" height="40px">
-                <h3>NOVOS NEGÓCIOS</h3>
-                <p>Organização voltada para a estruturação de processos, funções e estratégias, garantindo uma atuação eficiente, escalável e sustentável.</p>
+                <img class="icone-fundo" src="../assets/icons/servicos/reforma-icon.png" alt="Serviço Icon" width="40px" height="40px">
+                <h3>REFORMA</h3>
+                <p>Execução e adequação de ambientes já existentes, envolvendo alterações estruturais como a subida e descida de paredes, com foco em melhorar a funcionalidade, o aproveitamento de espaço e a estética do local.</p>
             </div>
 
             <div class="servico">
-                <img class="icone-fundo" src="../assets/icons/servicos/pesquisa-icon.png" alt="Serviço Icon" width="40px" height="40px">
-                <h3>PESQUISA DE MERCADO</h3>
-                <p>Coleta e análise de informações de mercado, como consumidores, concorrentes, tendências e hábitos de compras.</p>
-            </div>
-
-            <div class="servico">
-                <img class="icone-fundo" src="../assets/icons/servicos/consultoria-icon.png" alt="Serviço Icon" width="40px" height="40px">
-                <h3>CONSULTORIA</h3>
-                <p>Acompanhamento mensal de 3, 6 ou 9 meses para a sugestão de melhorias e diagnóstico detalhado das dores não óbvias dentro de um negócio.</p>
-            </div>
-
-            <div class="servico">
-                <img class="icone-fundo" src="../assets/icons/servicos/ti-icon.png" alt="Serviço Icon" width="40px" height="40px">
-                <h3>TECNOLOGIA E INOVAÇÕES</h3>
-                <p>Formulação de E-Commerce, Landing Page ou Site Institucional.</p>
-            </div>
-
-            <div class="servico">
-                <img class="icone-fundo" src="../assets/icons/servicos/arquitetura-icon.png" alt="Serviço Icon" width="40px" height="40px">
-                <h3>ARQUITETURA</h3>
-                <p>Desenvolvimento de um planejamento completo para a repaginação de ambientes, com foco em funcionalidade, estética e bem-estar.</p>
+                <img class="icone-fundo" src="../assets/icons/servicos/paisagismo-icon.png" alt="Serviço Icon" width="40px" height="40px">
+                <h3>PAISAGISMO</h3>
+                <p>Planejamento e criação de espaços verdes por meio da seleção e disposição estratégica de plantas, priorizando bem-estar, harmonia visual e integração entre o ambiente construído e a natureza.</p>
             </div>
         </section>
-
         <section id="depoimentos">
             <h1 style="font-size: 22px;">DEPOIMENTOS</h1>
 
@@ -282,7 +263,7 @@
             <p>© 2025 Projetos Consultoria Integrada. Todos os direitos reservados.</p>
         </div>
     </footer>
-
+    
     <script src="../js/script.js"></script>
 </body>
 
