--- a/pages/consultorias.html
+++ b/pages/consultorias.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serviços - Projetos Consultoria Integrada</title>
+    <title>Contato - Projetos Consultoria Integrada</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../assets/logos/PCI-logo-vermelha.png" type="image/png">
 </head>
@@ -32,9 +32,9 @@
                     <a href="../index.html" id="nav-home" >Início</a>
                     <a href="../pages/sobre.html" id=nav-sobre >Sobre Nós</a>
                     <li class="solucoes">
-                        <a href="#" class="botao-solucoes">Soluções</a>
+                        <a href="#" id="botao-solucoes" class="active">Soluções</a>
                         <div class="solucoes-info">
-                            <a href="../pages/consultorias.html">Consultorias</a>
+                            <a href="../pages/consultorias.html" class="active">Consultorias</a>
                             <a href="../pages/arquitetura.html">Arquitetura</a>
                         </div>
                     </li>
@@ -64,7 +64,7 @@
     <main>
         <section id="serv-titulo">
         
-            <h1>NOSSOS SERVIÇOS</h1>
+            <h1>CONSULTORIAS</h1>
 
             <div class="serv-titulo-frase">
                 <p>
@@ -131,21 +131,9 @@
             </div>
 
             <div class="servico">
-                <img class="icone-fundo" src="../assets/icons/servicos/consultoria-icon.png" alt="Serviço Icon" width="40px" height="40px">
-                <h3>CONSULTORIA</h3>
-                <p>Acompanhamento mensal de 3, 6 ou 9 meses para a sugestão de melhorias e diagnóstico detalhado das dores não óbvias dentro de um negócio.</p>
-            </div>
-
-            <div class="servico">
                 <img class="icone-fundo" src="../assets/icons/servicos/ti-icon.png" alt="Serviço Icon" width="40px" height="40px">
                 <h3>TECNOLOGIA E INOVAÇÕES</h3>
                 <p>Formulação de E-Commerce, Landing Page ou Site Institucional.</p>
-            </div>
-
-            <div class="servico">
-                <img class="icone-fundo" src="../assets/icons/servicos/arquitetura-icon.png" alt="Serviço Icon" width="40px" height="40px">
-                <h3>ARQUITETURA</h3>
-                <p>Desenvolvimento de um planejamento completo para a repaginação de ambientes, com foco em funcionalidade, estética e bem-estar.</p>
             </div>
         </section>
 
@@ -282,7 +270,7 @@
             <p>© 2025 Projetos Consultoria Integrada. Todos os direitos reservados.</p>
         </div>
     </footer>
-
+    
     <script src="../js/script.js"></script>
 </body>
 
