--- a/pages/contato.html
+++ b/pages/contato.html
@@ -31,7 +31,13 @@
                 <ul>
                     <a href="../index.html" id="nav-home" >Início</a>
                     <a href="../pages/sobre.html" id=nav-sobre >Sobre Nós</a>
-                    <a href="../pages/servicos.html">Serviços</a></li>
+                    <li class="solucoes">
+                        <a href="#" class="botao-solucoes">Soluções</a>
+                        <div class="solucoes-info">
+                            <a href="../pages/consultorias.html">Consultorias</a>
+                            <a href="../pages/arquitetura.html">Arquitetura</a>
+                        </div>
+                    </li>
                     <a href="../pages/portifolio.html" id="nav-portifolio">Portfólio</a>
                     <a href="../pages/contato.html" id="nav-contato" class="active">Contato</a>
                 </ul>
