fix: Arrumando texto errado

--- a/pages/consultorias.html
+++ b/pages/consultorias.html
@@ -109,7 +109,7 @@
             <div class="servico">
                 <img class="icone-fundo" src="../assets/icons/servicos/estrategia-icon.png" alt="Serviço Icon" width="40px" height="40px">
                 <h3>ESTRATÉGIA E EXPANSÃO</h3>
-                <p>À partir de uma análise completa do negócio e do mercado, identificam-se oportunidades e direcionam-se ações para a obtenção de melhores resultados.</p>
+                <p>A partir de uma análise completa do negócio e do mercado, identificam-se oportunidades e direcionam-se ações para a obtenção de melhores resultados.</p>
             </div>
 
             <div class="servico">
