refactor: Melhoria de frase padrão do wpp

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -62,7 +62,7 @@
     </a>
     
     <div class="botao-wpp">
-        <a href="https://wa.me/5561998540330?text=Ol%C3%A1%21%20Quero%20marcar%20um%20diagn%C3%B3stico" target="_blank">
+        <a href="https://wa.me/5561998540330?text=Ol%C3%A1%21%20Gostaria%20de%20agendar%20um%20diagn%C3%B3stico" target="_blank">
             <img src="../assets/logos/wpp-logo.png" alt="WhatsApp" width="65px" height="65px">
         </a>
     </div>
