fix: Corrigido caminhos de url no rodapé

--- a/pages/arquitetura.html
+++ b/pages/arquitetura.html
@@ -245,7 +245,11 @@
                     </li>
 
                     <li>
-                        <a href="../pages/servicos.html">Serviços</a>
+                        <a href="../pages/consultorias.html">Consultorias</a>
+                    </li>
+
+                    <li>
+                        <a href="../pages/arquitetura.html">Arquitetura</a>
                     </li>
 
                     <li>
