--- a/index.html
+++ b/index.html
@@ -323,7 +323,8 @@
                 <ul>
                     <li><a href="index.html">Início</a></li>
                     <li><a href="./pages/sobre.html">Sobre</a></li>
-                    <li><a href="./pages/servicos.html">Serviços</a></li>
+                    <li><a href="./pages/consultorias.html">Consultorias</a></li>
+                    <li><a href="./pages/arquitetura.html">Arquitetura</a></li>
                     <li><a href="./pages/portifolio.html">Portfólio</a></li>
                     <li><a href="./pages/contato.html">Contato</a></li>
                 </ul>
