--- a/pages/consultorias.html
+++ b/pages/consultorias.html
@@ -253,7 +253,11 @@
                     </li>
 
                     <li>
-                        <a href="../pages/servicos.html">Serviços</a>
+                        <a href="../pages/consultorias.html">Consultorias</a>
+                    </li>
+
+                    <li>
+                        <a href="../pages/arquitetura.html">Arquitetura</a>
                     </li>
 
                     <li>
