feat: Botão de serviços excluído

--- a/index.html
+++ b/index.html
@@ -104,11 +104,15 @@
 
                 <div class="apt-botao">
                     <a href="pages/contato.html">
-                        <img src="assets/icons/telefone-icon.png" alt="telefone-icon">FALE CONOSCO
+                        <img src="assets/icons/telefone-icon.png" alt="telefone icon">FALE CONOSCO
                     </a>
 
-                    <a href="pages/servicos.html">
-                        <img src="assets/icons/servicos-icon.png" alt="telefone-icon">SERVIÇOS
+                    <a href="pages/consultorias.html">
+                        <img src="assets/icons/servicos/operacoes-icon.png" alt="consultoria icon">CONSULTORIAS
+                    </a>
+
+                    <a href="pages/arquitetura.html">
+                        <img src="assets/icons/servicos/arquitetonico-icon.png" alt="arquitetura icon">ARQUITETURA
                     </a>
                 </div>
             </div>
@@ -187,11 +191,6 @@
                     <li>
                         <a href="https://www.criamov.com/" target="_blank">
                             <img src="assets/logos/parcerias/criamov-logo.png" alt="CRIAmov Logo">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/clubedeengenhariabsb/" target="_blank">
-                            <img src="assets/logos/parcerias/cenb-logo.png" alt="CENB Logo">
                         </a>
                     </li>
                     <li>
